# File-Backup

./: .gitignore  CMakeLists.txt  README.md  doc.md  interfaces.md  web_api.md
common/: CMakeLists.txt
common/include/common/: backup_request.h  conflict_policy.h  entry_info.h  entry_type.h  filter_rules.h  progress.h  restore_request.h  result.h  status.h  stub_archive_format.h
common/tests/: CMakeLists.txt  common_test.cpp
demo_backup/data/: 10kb.txt  backup.bak  large.txt  medium.txt  user1001.txt  user1002.txt
frontend/: README.md  app-data.js  app.js  index.html  styles.css
modules/: CMakeLists.txt
modules/archive_reader/: CMakeLists.txt
modules/archive_reader/include/modules/archive_reader/: archive_reader.h
modules/archive_reader/src/: archive_reader.cpp
modules/archive_reader/tests/: CMakeLists.txt  archive_reader_functional_test.cpp  archive_reader_test.cpp
modules/archive_writer/: CMakeLists.txt
modules/archive_writer/include/modules/archive_writer/: archive_writer.h
modules/archive_writer/src/: archive_writer.cpp
modules/archive_writer/tests/: CMakeLists.txt  archive_functional_test.cpp  archive_writer_test.cpp
modules/filter/: CMakeLists.txt
modules/filter/include/modules/filter/: filter.h
modules/filter/src/: filter.cpp
modules/filter/tests/: CMakeLists.txt  filter_functional_test.cpp  filter_test.cpp
modules/restore/: CMakeLists.txt
modules/restore/include/modules/restore/: restore.h
modules/restore/src/: restore.cpp
modules/restore/tests/: CMakeLists.txt  restore_test.cpp
modules/scanner/: CMakeLists.txt
modules/scanner/include/modules/scanner/: scanner.h
modules/scanner/src/: scanner.cpp
modules/scanner/tests/: CMakeLists.txt  scanner_test.cpp
scheduler/: CMakeLists.txt
scheduler/include/scheduler/: backup_scheduler.h  restore_scheduler.h  task.h  task_manager.h  task_runtime.h  task_status.h
scheduler/src/: backup_scheduler.cpp  restore_scheduler.cpp  task_manager.cpp  task_runtime.cpp  task_runtime_events.cpp  task_runtime_impl.h  task_runtime_submission.cpp  task_runtime_worker.cpp
scheduler/tests/: CMakeLists.txt  backup_scheduler_test.cpp  restore_scheduler_test.cpp  task_manager_test.cpp  task_runtime_test.cpp
scripts/: build.sh  start.sh
tests/helpers/: filesystem_fixture.h  temp_dir.h
tests/mocks/: mock_modules.h
web_api/: CMakeLists.txt  README.md
web_api/include/web_api/: web_api.h
web_api/src/: main.cpp  web_api.cpp  web_api_internal.cpp  web_api_internal.h  web_api_server.cpp
web_api/tests/: CMakeLists.txt  project_acceptance_test.cpp  web_api_test.cpp
