add_executable(archive_reader_test archive_reader_test.cpp)
target_link_libraries(archive_reader_test PRIVATE backup_archive_reader backup_archive_writer GTest::gtest_main)
target_include_directories(archive_reader_test PRIVATE ${CMAKE_SOURCE_DIR}/tests/helpers)

add_test(NAME archive_reader COMMAND archive_reader_test)
set_tests_properties(archive_reader PROPERTIES LABELS "archive_reader")
